--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Zaltv Community
+description: Những điều mà bạn cần biết nếu muốn tham gia Zaltv (chia sẻ code zaltv)
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-cayman
+
